<resources>
    <string name="app_name">stutern_Calculator</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="plus_minus">±</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="plus_symbol">+</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="minus_symbol">-</string>
    <string name="backspace">backspace</string>
    <string name="clear">C</string>
    <string name="division_symbol">÷</string>
    <string name="multiplication_symbol">×</string>
</resources>
