<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="112dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/display_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="416dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/second_display_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="600dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/plus_minus_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="88dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/plus_minus"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/zero_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/zero_button"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/zero_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="88dp"
        android:layout_height="72dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/zero"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/plus_minus_button"
        app:layout_constraintEnd_toStartOf="@id/dot_button"
        app:layout_constraintLeft_toRightOf="@id/plus_minus_button"
        app:layout_constraintRight_toLeftOf="@id/dot_button"
        app:layout_constraintStart_toEndOf="@id/plus_minus_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dot_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="88dp"
        android:layout_height="72dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"

        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/dot"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/zero_button"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintLeft_toRightOf="@id/zero_button"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        app:layout_constraintStart_toEndOf="@id/zero_button" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/equal_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="88dp"
        android:layout_height="144dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/equal"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@id/dot_button"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintStart_toEndOf="@id/guideline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/plus_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="88dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/plus_symbol"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/button_six"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="@id/guideline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/multiplication_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="88dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/multiplication_symbol"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/division_button"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintStart_toEndOf="@id/guideline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/minus_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="88dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/minus_symbol"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/button_nine"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="@id/guideline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_one"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="88dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/one"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@id/plus_minus_button"
        app:layout_constraintEnd_toStartOf="@id/button_two"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_two"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_two"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="88dp"
        android:layout_height="72dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/two"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/button_one"
        app:layout_constraintBottom_toTopOf="@id/zero_button"
        app:layout_constraintEnd_toStartOf="@id/button_three"
        app:layout_constraintLeft_toRightOf="@id/button_one"
        app:layout_constraintRight_toLeftOf="@id/button_three"
        app:layout_constraintStart_toEndOf="@id/button_one" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_three"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="88dp"
        android:layout_height="72dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/three"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/button_two"
        app:layout_constraintBottom_toTopOf="@id/dot_button"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintLeft_toRightOf="@id/button_two"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        app:layout_constraintStart_toEndOf="@id/button_two" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_four"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="88dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/four"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@id/button_one"
        app:layout_constraintEnd_toStartOf="@id/button_five"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_five"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_five"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="88dp"
        android:layout_height="72dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/five"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/button_four"
        app:layout_constraintBottom_toTopOf="@id/button_two"
        app:layout_constraintEnd_toStartOf="@id/button_six"
        app:layout_constraintLeft_toRightOf="@id/button_four"
        app:layout_constraintRight_toLeftOf="@id/button_six"
        app:layout_constraintStart_toEndOf="@id/button_four" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_six"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="88dp"
        android:layout_height="72dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"

        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/six"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/button_four"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintLeft_toRightOf="@id/button_five"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        app:layout_constraintStart_toEndOf="@id/button_five" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_seven"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="88dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/seven"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@id/button_four"
        app:layout_constraintEnd_toStartOf="@id/button_eight"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_eight"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_eight"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="88dp"
        android:layout_height="72dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/eight"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/button_seven"
        app:layout_constraintBottom_toTopOf="@id/button_five"
        app:layout_constraintEnd_toStartOf="@id/button_nine"
        app:layout_constraintLeft_toRightOf="@id/button_seven"
        app:layout_constraintRight_toLeftOf="@id/button_nine"
        app:layout_constraintStart_toEndOf="@id/button_seven" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_nine"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="88dp"
        android:layout_height="72dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"

        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/nine"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/button_eight"
        app:layout_constraintBottom_toTopOf="@id/button_six"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintLeft_toRightOf="@id/button_eight"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        app:layout_constraintStart_toEndOf="@id/button_eight" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backspace"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="88dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:icon="@drawable/outline_backspace_white_24"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toTopOf="@id/button_seven"
        app:layout_constraintEnd_toStartOf="@id/clear_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/clear_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="88dp"
        android:layout_height="72dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/clear"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/backspace"
        app:layout_constraintBottom_toTopOf="@id/button_eight"
        app:layout_constraintEnd_toStartOf="@id/division_button"
        app:layout_constraintLeft_toRightOf="@id/backspace"
        app:layout_constraintRight_toLeftOf="@id/division_button"
        app:layout_constraintStart_toEndOf="@id/backspace" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/division_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="88dp"
        android:layout_height="72dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/division_symbol"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/clear_button"
        app:layout_constraintBottom_toTopOf="@id/button_nine"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintRight_toLeftOf="@id/plus_button"
        app:layout_constraintStart_toEndOf="@id/clear_button" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@id/display_guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/second_display_guideline">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="end"
            android:textAlignment="textEnd"
            android:textSize="24sp" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>